--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Thank you</title>
 </head>
-<body class="bg-gray-900">
-    <h1 class="flex justify-center text-3xl text-center mx-auto text-white">Thank You</h1>
+<body class="bg-gray-900 flex justify-center text-white items-center mx-auto ">
+    <h1 class="flex justify-center text-3xl text-center mx-auto text-white py-auto">Thank You</h1>
 </body>
 </html>
